Update game title and character name in HTML

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>O Mundo de Roberto</title>
+    <title>O Mundo de Magia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🏰 O MUNDO DE ROBERTO — O LENDÁRIO GUERREIRO</h1>
+    <h1>🏰 O MUNDO DE ISAAC — O LENDÁRIO GUERREIRO</h1>
     <div id="output" class="output"></div>
 
     <div id="mapa" class="mapa"></div>
@@ -22,5 +22,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
